Minor updates to values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Sopa de Letras 2</string>
+    <string name="app_name">Sopa de Letras</string>
     <string name="empty"> </string>
 </resources>
